added some more code.

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 		visualize({
 		auth: {
 			name: "jasperadmin",
-			password: "jsadmin601",
+			password: "secret",
 			organization: "organization_1"
 		}
 		}, function(v) {
