--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-2.1.0.js"></script>
-		<script src="http://172.16.252.144:8080/jasperserver-pro601/client/visualize.js?_opt=false"></script>
+		<script src="http://172.16.252.141:8080/jasperserver-pro601/client/visualize.js?_opt=false"></script>
 	<script>
-	
+			var qs = (function(a) {
+		if (a == "") return {};
+		var b = {};
+		for (var i = 0; i < a.length; ++i)
+		{
+			var p=a[i].split('=', 2);
+			if (p.length == 1)
+				b[p[0]] = "";
+			else
+				b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+		}
+		return b;
+		})(window.location.search.substr(1).split('&'));
+
 	$(function(){
 		visualize({
 		auth: {
@@ -13,7 +26,7 @@
 		}
 		}, function(v) {
 		v("#first").report({
-        resource: "/public/Samples/Reports/Manheim/ProductsByID_crosstab",
+        resource: "/public/Samples/Reports/Manheim/ProductsByID",
 		events: {beforeRender: function(el){
 			removeAllStyle(el);
 		}},
@@ -28,22 +41,10 @@
 		
 		function removeAllStyle(el)
 		{
-			//tables
 			$(el).find(".jrcel").removeAttr("style");
 			$(el).find(".jrcolHeader").removeAttr("style");
 			$(el).find(".jrcel span").removeAttr("style");
 			$(el).find(".jrcolHeader span").removeAttr("style");
-
-			//crosstabs
-			$(el).find(".jrxtcolheader").removeAttr("style");
-			$(el).find(".jrxtcolheader span").removeAttr("style");
-			$(el).find(".jrxtrowheader").removeAttr("style");
-			$(el).find(".jrxtrowheader span").removeAttr("style");
-			$(el).find(".jrxtdatacell").removeAttr("style");
-			$(el).find(".jrxtdatacell span").removeAttr("style");
-			
-
-			
 		}
 
 	</script>
